--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
 		"@batterii/eslint-config-ts": "^2.1.0",
 		"@batterii/generator-ts-class": "^0.2.0",
 		"@batterii/generator-ts-module": "^0.2.0",
-		"@batterii/generator-ts-test": "^0.1.0",
-		"@types/chai": "^4.2.7",
+		"@batterii/generator-ts-test": "^0.1.1",
+		"@types/chai": "^4.2.8",
 		"@types/mocha": "^5.2.7",
-		"@types/node": "^10.17.13",
+		"@types/node": "^10.17.14",
 		"@types/sinon": "^7.5.1",
 		"@types/sinon-chai": "^3.2.3",
-		"@typescript-eslint/eslint-plugin": "^2.16.0",
-		"@typescript-eslint/parser": "^2.16.0",
+		"@typescript-eslint/eslint-plugin": "^2.19.0",
+		"@typescript-eslint/parser": "^2.19.0",
 		"chai": "^4.2.0",
 		"eslint": "^6.8.0",
 		"mocha": "^6.2.2",
@@ -50,7 +50,8 @@
 		"yo": "^3.1.1"
 	},
 	"dependencies": {
+		"@batterii/errors": "^2.1.0",
 		"base64url": "^3.0.1",
-		"nani": "^3.0.0"
+		"nani": "^3.2.0"
 	}
 }
