--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "2.0.0",
 	"description": "Object encoding and decoding utils",
 	"author": "Batterii, LLC",
-	"license": "UNLICENSED",
+	"license": "MIT",
 	"repository": "github:Batterii/encode-object",
 	"files": [
 		"dist/lib",
