Add engines property to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
 	"author": "Batterii, LLC",
 	"license": "MIT",
 	"repository": "github:Batterii/encode-object",
+	"engines": {
+		"node": ">=8.6",
+		"npm": ">=5.3"
+	},
 	"files": [
 		"dist/lib",
 		"dist/types"
